--- a/create-service/package.json
+++ b/create-service/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.6.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
